--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "favicon": "./assets/sf_icon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-sqlite"
     ],
     "extra": {
       "eas": {
