--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@nozbe/watermelondb": "^0.28.0",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native-stack": "^7.3.21",
-    "expo": "^53.0.20",
+    "expo": "^53.0.22",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
-    "expo-navigation-bar": "~4.2.6",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "fuzzball": "^2.2.2",
     "react": "19.0.0",
