--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.jesus_muve.cantoral_sanfran'
+    namespace 'com.jesus_muve.cantoral_sanfran_test'
     defaultConfig {
-        applicationId 'com.jesus_muve.cantoral_sanfran'
+        applicationId 'com.jesus_muve.cantoral_sanfran_test'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
